Set data table sorter to vertical-align: bottom, fixes https://github.com/poetry-dotnet/Poetry.UI/issues/89

--- a/Poetry.UI.DataTableSupport/Styles/data-table.scss
+++ b/Poetry.UI.DataTableSupport/Styles/data-table.scss
@@ -60,7 +60,7 @@ data-table-sorter {
     background-position: center;
     background-repeat: no-repeat;
     background-image: url("data:image/svg+xml,%3Csvg height='10' width='10' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10'%3E  %3Cpath d='M0 0h4v2H0zm0 4h6v2H0zm0 4h10v2H0z' fill='%23bbbbbb'/%3E%3C/svg%3E");
-    vertical-align: top;
+    vertical-align: bottom;
     cursor: pointer;
 
     &.active {
